<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00b8e6"
    android:paddingLeft="16dp"
    android:paddingTop="106dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/Widget.AppCompat.DrawerArrowToggle"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/Log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/TV_Login_Autorization"
        android:textColor="#CC000000"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Logg"
        android:layout_below="@+id/Log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">

    <EditText
        android:id="@+id/Login"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/text_edit"
        android:drawableStart="@drawable/users1"
        android:hint="@string/ET_Login_Login"
        android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/Pass"
        android:layout_below="@+id/Logg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/Password"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="@drawable/text_edit"
            android:drawableStart="@drawable/pass"
            android:hint="@string/ET_L_Password"
            android:ems="20"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginBut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Pass"
        android:layout_marginTop="50dp"
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_edit"
        android:text="@string/B_Login_Exit"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/B_Register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBut"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        android:background="@drawable/text_edit"
        android:text="@string/B_L_Register"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"/>
</RelativeLayout>